--- a/m1/s1/g4/FE-S1-L4-Esercizio (1)/assets/css/style.css
+++ b/m1/s1/g4/FE-S1-L4-Esercizio (1)/assets/css/style.css
@@ -7,6 +7,9 @@ body{
     background-image: url(../img/sfondo.png);
     line-height: 1.5rem;
 }
+a{
+    color: #0CA1C8;
+}
 /* HEADER */
 #logo{
     margin: auto;
@@ -64,7 +67,7 @@ h1{
 .viola{
     color: #A22972;
 }
-ul{
+#ul{
     list-style-type: unset;
     margin: auto;
     padding-left: 20px;
@@ -76,9 +79,29 @@ ol{
     padding-left: 20px;
     padding-bottom: 20px;
 }
-
 /* TABELLE */
-
+#table{
+    margin: auto;
+    border-bottom: 2px solid #3A6CC9;
+    margin-bottom: 30px;
+}
+#caption{
+    font-weight: 800;
+    font-style: italic;
+}
+th{
+    background-color: #3A6CC9;
+    color: white;
+}
+th, td, tr{
+    padding: 10px;
+}
+#t-iframe{
+    padding-bottom: 20px;
+}
+iframe{
+    
+}
 /* FORM */
 
 /* ELEMENTI NELL' ASIDE */
