iframe, manca footer

--- a/m1/s1/g4/FE-S1-L4-Esercizio (1)/assets/css/style.css
+++ b/m1/s1/g4/FE-S1-L4-Esercizio (1)/assets/css/style.css
@@ -100,7 +100,9 @@ th, td, tr{
     padding-bottom: 20px;
 }
 iframe{
-    
+    margin: auto;
+    width: auto;
+    height: auto;
 }
 /* FORM */
 
