inizio css progetto settimanale 1

--- a/m1/s1/g4/FE-S1-L4-Esercizio (1)/assets/css/style.css
+++ b/m1/s1/g4/FE-S1-L4-Esercizio (1)/assets/css/style.css
@@ -99,13 +99,12 @@ th, td, tr{
 #t-iframe{
     padding-bottom: 20px;
 }
-iframe{
+#iframe{
     margin: auto;
-    width: auto;
-    height: auto;
+    height: 250px;
+    width: 100%;
+    border-radius: 20px;
 }
 /* FORM */
-
-/* ELEMENTI NELL' ASIDE */
 
 /* FOOTER */
