--- a/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/css/style.css
+++ b/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/css/style.css
@@ -1,8 +1,9 @@
 /* Generale */
 *{
     text-align: center;
-
+    max-width: 100%;
 }
+img
 h1,h2,h3,h4,h5,h6{
     font-family: 'Montserrat', sans-serif;
     color: #25a2c3;
@@ -17,10 +18,60 @@ body{
 /* Header */
 #header{
     margin: auto;
-    max-height: 50%;
-    max-width: 50%;
+    background-color: black;
 }
-/* Main */
+header img{
+    max-width: 30%;
+    max-height: 30%;
+    padding: 20px;
+}
+/* Main Section */
+#main-section h1{
+    font-size: 2.8rem;
+    font-weight: 600;
+    line-height: 1;
+    padding: 30px;
+    color: #25a2c3;
+}
+#main-section{
+    background-image: url(../images/banner.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: auto;
+    padding-top: 20px;
+    padding-bottom: 40px;
+}
+#main-section p{
+    margin: auto;
+    padding-bottom: 35px;
+    max-width: 90%;
+}
+#main-section a{
+    color: white;
+    font-size: 1rem;
+    text-decoration: none;
+    background-color: #e22d0e;
+    padding: 10px 25px 10px;
+    margin-top: 30px;
+    font-weight: 600;
+    border-radius: 5px;
+}
+/* Secondary Section */
+#secondary-section{
+    margin: auto;
+    padding: 50px 20px 30px;
+}
+#secondary-section div{
+    padding-bottom: 20px;
+}
+#secondary-section h3{
+    font-weight: 600;
+    padding-bottom: 5px;
+}
+#secondary-section img{
+    border-radius: 500px;
+    max-width: 60%;
+}
 
 /* Aside */
 
