--- a/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/css/style.css
+++ b/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/css/style.css
@@ -3,7 +3,6 @@
     text-align: center;
     max-width: 100%;
 }
-img
 h1,h2,h3,h4,h5,h6{
     font-family: 'Montserrat', sans-serif;
     color: #25a2c3;
@@ -15,7 +14,9 @@ body{
     color: #393d41;
     line-height: 1.65;
 }
+
 /* Header */
+
 #header{
     margin: auto;
     background-color: black;
@@ -25,7 +26,9 @@ header img{
     max-height: 30%;
     padding: 20px;
 }
+
 /* Main Section */
+
 #main-section h1{
     font-size: 2.8rem;
     font-weight: 600;
@@ -50,13 +53,15 @@ header img{
     color: white;
     font-size: 1rem;
     text-decoration: none;
-    background-color: #e22d0e;
+    background-color: #f04c2f;
     padding: 10px 25px 10px;
     margin-top: 30px;
     font-weight: 600;
     border-radius: 5px;
 }
+
 /* Secondary Section */
+
 #secondary-section{
     margin: auto;
     padding: 50px 20px 30px;
@@ -71,8 +76,33 @@ header img{
 #secondary-section img{
     border-radius: 500px;
     max-width: 60%;
+    overflow: hidden;
 }
 
+/* Red Section */
+
+#red-section{
+    background-color: #e22d0e;
+    color: white;
+    padding: 20px;
+}
+#red-section h2{
+    color: white;
+    padding: 25px;
+    font-size: 2.3rem;
+    font-weight: 600;
+}
+#red-section blockquote{
+    font-size: 1rem;
+    padding-bottom: 20px;
+    font-style: italic;
+}
+#p1{
+    font-size: 1.3rem;
+}
+#p2{
+    font-size: 0.8rem;
+}
 /* Aside */
 
 /* Footer */
