--- a/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/css/style.css
+++ b/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/css/style.css
@@ -44,7 +44,7 @@ header img{
     padding-top: 20px;
     padding-bottom: 40px;
 }
-#main-section p{
+.main-section-p{
     margin: auto;
     padding-bottom: 35px;
     max-width: 90%;
@@ -86,7 +86,7 @@ header img{
     color: white;
     padding: 20px;
 }
-#red-section h2{
+.body-h2{
     color: white;
     padding: 25px;
     font-size: 2.3rem;
@@ -102,7 +102,40 @@ header img{
 }
 #p2{
     font-size: 0.8rem;
+    padding-bottom: 20px;
 }
 /* Aside */
+#aside div{
+    border: 1px solid #dee1e3;
+    margin: 20px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+#aside h3{
+    font-weight: 600;
+    padding: 10px;
+}
+.card{
+    margin: auto;
+    padding-bottom: 40px;
+    max-width: 80%;
+}
 
 /* Footer */
+
+#footer{
+    background-color: #25a2c3;
+    padding:20px;
+    color: white;
+    font-weight: 200;
+}
+#footer a{
+    color: white;
+}
+footer hr{
+    max-width: 50%;
+    color: white;
+}
+footer p{
+    padding-bottom: 20px;
+}
