cartelle sistemate mobile e desktop

--- a/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/mobile/css/style.css
+++ b/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/mobile/css/style.css
@@ -37,7 +37,7 @@ header img{
     color: #25a2c3;
 }
 #main-section{
-    background-image: url(../images/banner.jpg);
+    background-image: url(../images-copia/banner.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     margin: auto;
