--- a/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/desktop/css/style.css
+++ b/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/desktop/css/style.css
@@ -1,6 +1,5 @@
 /* Generale */
 *{
-    text-align: center;
     max-width: 100%;
 }
 h1,h2,h3,h4,h5,h6{
@@ -13,22 +12,33 @@ body{
     font-size: 1.2rem;
     color: #393d41;
     line-height: 1.65;
+    text-align: center;
 }
 
 /* Header */
 
 #header{
-    margin: auto;
+    text-align: left;
     background-color: black;
 }
 header img{
-    max-width: 30%;
-    max-height: 30%;
+    max-width: 10%;
+    max-height: 10%;
     padding: 20px;
+    
 }
 
 /* Main Section */
 
+#main-section{
+    background-image: url(../images/banner.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    margin: auto;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    max-width: 100%;
+}
 #main-section h1{
     font-size: 2.8rem;
     font-weight: 600;
@@ -36,18 +46,10 @@ header img{
     padding: 30px;
     color: #25a2c3;
 }
-#main-section{
-    background-image: url(../images/banner.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin: auto;
-    padding-top: 20px;
-    padding-bottom: 40px;
-}
 .main-section-p{
     margin: auto;
     padding-bottom: 35px;
-    max-width: 90%;
+    max-width: 40%;
 }
 #main-section a{
     color: white;
@@ -65,9 +67,12 @@ header img{
 #secondary-section{
     margin: auto;
     padding: 50px 20px 30px;
+    display: inline-block;
 }
 #secondary-section div{
     padding-bottom: 20px;
+    display: block;
+    text-align: center;
 }
 #secondary-section h3{
     font-weight: 600;
@@ -107,7 +112,7 @@ header img{
 /* Aside */
 #aside div{
     border: 1px solid #dee1e3;
-    margin: 20px;
+    margin: 800px;
     margin-top: 50px;
     margin-bottom: 50px;
 }
@@ -115,10 +120,13 @@ header img{
     font-weight: 600;
     padding: 10px;
 }
-.card{
+.card-p{
     margin: auto;
     padding-bottom: 40px;
     max-width: 80%;
+}
+.card{
+    display: inline-block;
 }
 
 /* Footer */
