--- a/m2/s2/g5/assets/style.css
+++ b/m2/s2/g5/assets/style.css
@@ -19,3 +19,24 @@
 .dropdown-action{
     color: white;
 }
+
+.profile_btn{
+    background-color: black;
+    border-radius: 0;
+    border-color: white;
+}
+
+.profile_btn2{
+    border-radius: 0;
+    background-color: #333333;
+    border-color: #333333;
+}
+
+.profile_btn3{
+    border-radius: 0;
+    padding: 5px 25px
+}
+
+.span{
+    font-weight: 600;
+}
