--- a/m2/s2/g5/assets/style.css
+++ b/m2/s2/g5/assets/style.css
@@ -34,7 +34,9 @@
 
 .profile_btn3{
     border-radius: 0;
-    padding: 5px 25px
+    padding: 5px 25px;
+    margin-left: 30px; 
+    margin-right: 30px; 
 }
 
 .span{
