--- a/m3/s1/g3/giorno3/src/app/app.component.html
+++ b/m3/s1/g3/giorno3/src/app/app.component.html
@@ -1,3 +1,28 @@
+<div class="container-fluid">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" routerLink="./pages/home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="./pages/contatti">Contatti</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="./pages/chi-siamo">Chi siamo</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</div>
+
+
 <div class="container">
 
   <h1>mac os fai cagare</h1>
@@ -5,12 +30,14 @@
   <h2>windows mi manchi</h2>
 
   <div>
-    <div class="card">
-      <div class="card-header">
-        {{postArr[0].title}}
-      </div>
-      <div class="card-body">
-        <p class="card-text">{{postArr[0].body}}</p>
+    <div class="container mt-5">
+      <div class="card">
+        <div class="card-header">
+          {{postArr[0].title}}
+        </div>
+        <div class="card-body">
+          <p class="card-text">{{postArr[0].body}}</p>
+        </div>
       </div>
     </div>
   </div>
