--- a/m3/s2/g5/todolist/src/app/components/prova/prova.component.html
+++ b/m3/s2/g5/todolist/src/app/components/prova/prova.component.html
@@ -1,25 +1,25 @@
-<div class="container ps-0 mt-5">
+<div class="container ps-0 mt-5" *ngFor="let sium of todoArr">
 
-  <div class="d-flex flex-column flex-md-row p-0">
+  <div class="d-flex flex-column flex-md-row p-0" >
     <div class="list-group">
       <label class="list-group-item d-flex gap-2">
         <input class="form-check-input flex-shrink-0" type="checkbox" value="" checked="">
         <span>
-          {{serviceProva.todo[0].todo}}
+          {{sium.serviceProva.todo}}
           <small class="d-block text-body-secondary">Assigned to:</small>
         </span>
       </label>
       <label class="list-group-item d-flex gap-2">
         <input class="form-check-input flex-shrink-0" type="checkbox" value="">
         <span>
-          Second checkbox
+          aiuto
           <small class="d-block text-body-secondary">Some other text goes here</small>
         </span>
       </label>
       <label class="list-group-item d-flex gap-2">
         <input class="form-check-input flex-shrink-0" type="checkbox" value="">
         <span>
-          Third checkbox
+          aiuto
           <small class="d-block text-body-secondary">And we end with another snippet of text</small>
         </span>
       </label>
